--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:file:~/testdb;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:C:/Users/selli/test;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 
 
 
